--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "config"        : "0.4.11",
         "cluster"       : "0.7.7",
         "winston"       : "0.5.1",
-        "node-uuid"     : "1.3.3"
+        "node-uuid"     : "1.3.3",
+        "dateformat"    : "1.0.2-1.2.3"
     },
 
     "devDependencies": {
